--- a/code-1.ipynb
+++ b/code-1.ipynb
@@ -21,10 +21,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dfd\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
