added .env file

--- a/code-1.ipynb
+++ b/code-1.ipynb
@@ -2,19 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dfkd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"dfkd\")"
+    "## simple ai assistant\n",
+    "## noob langchain"
    ]
   },
   {
